[gd_scene load_steps=9 format=3 uid="uid://0cdy5iuxlvqd"]

[ext_resource type="Theme" uid="uid://rub3asjuwm5w" path="res://asset/theme/event/node/event_node.tres" id="1_dkxm3"]
[ext_resource type="Script" path="res://scene/editor/event/node/EventFlowNodeBase.cs" id="1_f1ryd"]
[ext_resource type="PackedScene" uid="uid://bhc8hqjw7nqek" path="res://scene/editor/event/node/port/port_in.tscn" id="3_xs8rq"]
[ext_resource type="Script" path="res://scene/editor/event/node/component/port_list_out.gd" id="4_x5hdg"]
[ext_resource type="Script" path="res://scene/editor/event/node/component/area_drag_collider.gd" id="5_ey2sh"]
[ext_resource type="StyleBox" uid="uid://dor0dac83hoqe" path="res://asset/theme/event/node/stylebox/event_node_selection_panel.tres" id="5_vyepf"]

[sub_resource type="LabelSettings" id="LabelSettings_h5ieb"]
font_size = 11
font_color = Color(1, 1, 1, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xs1ce"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0, 0, 0, 0.309804)

[node name="EventFlowNode" type="Node2D" node_paths=PackedStringArray("PortIn", "PortOutList", "RootPanel", "SelectionPanel", "DebugDataDisplay")]
script = ExtResource("1_f1ryd")
PortIn = NodePath("Content/Ports/PortHolder_In/Port_In")
PortOutList = NodePath("Content/Ports/PortHolder_Out/PortList_Out")
RootPanel = NodePath("Content")
SelectionPanel = NodePath("Content/Panel_Selection")
DebugDataDisplay = NodePath("Content/Debug/VBox_DebugDisplay/Label_Debug")

[node name="Content" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1
theme = ExtResource("1_dkxm3")

[node name="Ports" type="HBoxContainer" parent="Content"]
z_index = 1
layout_mode = 2

[node name="PortHolder_In" type="Control" parent="Content/Ports"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="Port_In" parent="Content/Ports/PortHolder_In" instance=ExtResource("3_xs8rq")]
layout_mode = 2
offset_left = -24.0
offset_bottom = 24.0

[node name="PortHolder_Out" type="Control" parent="Content/Ports"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
mouse_filter = 2

[node name="PortList_Out" type="VBoxContainer" parent="Content/Ports/PortHolder_Out"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
theme_override_constants/separation = 12
script = ExtResource("4_x5hdg")

[node name="Display" type="VBoxContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="HBox_Name" type="HBoxContainer" parent="Content/Display"]
layout_mode = 2

[node name="Label_Name" type="Label" parent="Content/Display/HBox_Name"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label_Type" type="Label" parent="Content/Display"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
label_settings = SubResource("LabelSettings_h5ieb")

[node name="Panel_Selection" type="Panel" parent="Content"]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("5_vyepf")

[node name="Debug" type="Control" parent="Content"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="VBox_DebugDisplay" type="VBoxContainer" parent="Content/Debug"]
layout_mode = 2
offset_top = 16.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="Label_Debug" type="Label" parent="Content/Debug/VBox_DebugDisplay"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_xs1ce")

[node name="Area_DragCollider" type="Area2D" parent="." node_paths=PackedStringArray("content")]
z_index = 1
collision_layer = 2
monitorable = false
script = ExtResource("5_ey2sh")
content = NodePath("../Content")

[node name="Shape" type="CollisionShape2D" parent="Area_DragCollider"]
debug_color = Color(0.221667, 0, 0.7, 0.419608)

[connection signal="resized" from="Content" to="." method="OnNodeResized"]
[connection signal="resized" from="Content" to="Area_DragCollider" method="_on_content_size_changed"]
[connection signal="area_entered" from="Area_DragCollider" to="Area_DragCollider" method="_on_selector_entered"]
[connection signal="area_exited" from="Area_DragCollider" to="Area_DragCollider" method="_on_selector_exited"]
[connection signal="mouse_entered" from="Area_DragCollider" to="Area_DragCollider" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area_DragCollider" to="Area_DragCollider" method="_on_mouse_exited"]
[connection signal="node_deselected" from="Area_DragCollider" to="." method="OnNodeDeselected"]
[connection signal="node_drag_ended" from="Area_DragCollider" to="." method="OnNodeColliderDragEnded"]
[connection signal="node_dragged" from="Area_DragCollider" to="." method="OnNodeColliderDragged"]
[connection signal="node_multiselected" from="Area_DragCollider" to="." method="OnNodeSelected" binds= [true]]
[connection signal="node_selected" from="Area_DragCollider" to="." method="OnNodeSelected" binds= [false]]
